feat(SNP-629): example changes

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -10,6 +10,8 @@
     "---------": "---------",
     "description": "Примеры"
   },
+  "examplesTitle": "Примеры",
+  "examplesLocalizationTitle": "Примеры локализации",
   "weekDay": "{date}",
   "@weekDay": {
     "placeholders": {
