fix: fixed comments

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -66,5 +66,8 @@
         "type": "String"
       }
     }
-  }
+  },
+  "dashScreenNavBarItemLabel": "Dash screen",
+  "infoScreenNavBarItemLabel": "Info screen",
+  "debugScreenNavBarItemLabel": "Debug screen"
 }
