--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -5,7 +5,6 @@
     "description": "Общие строки"
   },
   "positiveResponse": "Да",
-
   "@segmentExamples": {
     "---------": "---------",
     "description": "Примеры"
@@ -69,5 +68,10 @@
   },
   "dashScreenNavBarItemLabel": "Dash screen",
   "infoScreenNavBarItemLabel": "Info screen",
-  "debugScreenNavBarItemLabel": "Debug screen"
+  "debugScreenNavBarItemLabel": "Debug screen",
+  "@segmentApiInteractExample": {
+    "---------": "---------",
+    "description": "Пример взаимодействия с API"
+  },
+  "failedLoadIpMessage": "Не удалось загрузить IP-адрес"
 }
