fix: fixed after merge

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -68,5 +68,10 @@
   },
   "dashScreenNavBarItemLabel": "Dash screen",
   "infoScreenNavBarItemLabel": "Info screen",
-  "debugScreenNavBarItemLabel": "Debug screen"
+  "debugScreenNavBarItemLabel": "Debug screen",
+  "@segmentApiInteractExample": {
+    "---------": "---------",
+    "description": "Пример взаимодействия с API"
+  },
+  "failedLoadIpMessage": "Не удалось загрузить IP-адрес"
 }
