--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -69,9 +69,9 @@
   "dashScreenNavBarItemLabel": "Dash screen",
   "infoScreenNavBarItemLabel": "Info screen",
   "debugScreenNavBarItemLabel": "Debug screen",
-  "@segmentApiInteractExample": {
+  "@segmentFeatureExample": {
     "---------": "---------",
-    "description": "Example of interaction with API"
+    "description": "Example of feature"
   },
   "failedLoadIpMessage": "Failed to load IP address"
 }
