feat: added segment name to name of the variable in arb file

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -73,5 +73,5 @@
     "---------": "---------",
     "description": "Example of feature"
   },
-  "failedLoadIpMessage": "Failed to load IP address"
+  "featureExampleFailedLoadIpMessage": "Failed to load IP address"
 }
