feat: refactor debug screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -69,5 +69,6 @@
   "debugScreenThemeLight": "Light Theme",
   "debugScreenThemeDark": "Dark Theme",
   "debugScreenThemeSystem": "System Theme",
-  "debugScreenUikitNavigateButton": "Open UIKit"
+  "debugScreenUikitNavigateButton": "Open UIKit",
+  "debugScreenReloadAppMessage": "Reload the app to see applied changes"
 }
