feat: added api interaction example (#85)
* refactor: change dir structure according to surf standarts

* refactor: refactor bricks

* feat: changed structure

* feat: updated sctucture and mason

* docs: updated readme

* fix: fixed code style

* chore: updated RoutePages

* feat: updated generate route pattern

* feat: moved common, shared and core folders

* chore: sorted imports

* chore: removed folders from core

* chore: moved disposable object files

* chore: moved files from /util/ to /common/utils/

* fix: fixed comments

* feat: added Result class, RequestOperation and docs for it

* feat: added converter class

* Revert "feat: added converter class"

This reverts commit d22a0b6357ad3cc94016376b392a984e09d0856e.

* shore: directive sorted

* feat: added converter class

* fix: fixed comments

* chore: updated docs

* chore: changed name of parameter of convertMultipty method

* feat: added dio configurator

* feat: add dio configurator

* chore: removed extra code

* feat: added ip api

* feat: added api iteract example

* fix: fixed after merge

* chore: localization strings translated into English

* fix: fixed comments

* chore: removed extra file

* feat: added segment name to name of the variable in arb file

* fix: fixed comments

* feat: added value notifier x

* chore: getIp() wrapped makeCall()

---------

Co-authored-by: Sergey Parshonok <parshonok@surf.dev>
Co-authored-by: Dzmitry Struk <145117137+dzmitry-struk-surf@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -69,5 +69,10 @@
   "debugScreenThemeLight": "Light Theme",
   "debugScreenThemeDark": "Dark Theme",
   "debugScreenThemeSystem": "System Theme",
-  "debugScreenUikitNavigateButton": "Open UIKit"
+  "debugScreenUikitNavigateButton": "Open UIKit",
+  "@segmentFeatureExample": {
+    "---------": "---------",
+    "description": "Example of feature"
+  },
+  "featureExampleFailedLoadIpMessage": "Failed to load IP address"
 }
