feat: refactor debug feature

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -71,5 +71,44 @@
   "debugScreenThemeDark": "Темная темя",
   "debugScreenThemeSystem": "Системная тема",
   "debugScreenUikitNavigateButton": "Открыть UIKit",
-  "debugScreenReloadAppMessage": "Перезагрузите приложение, чтобы увидеть примененные изменения"
+  "debugScreenReloadAppMessage": "Перезагрузите приложение, чтобы увидеть примененные изменения",
+  "@segmentUiKitScreen": {
+    "---------": "---------",
+    "description": "Ui kit screen"
+  },
+  "uiKitScreenTitle": "UI Kit",
+  "uiKitScreenTextFieldLabel": "Text Field",
+  "uiKitScreenCardText": "Card",
+  "uiKitScreenText": "Text",
+  "uiKitScreenPrimaryButtonText": "Primary Button",
+  "uiKitScreenPrimaryButtonSnackText": "Primary Button Pressed",
+  "uiKitScreenSecondaryButtonText": "Secondary Button",
+  "uiKitScreenSecondaryButtonSnackText": "Secondary Button Pressed",
+  "uiKitScreenTertiaryButtonText": "Tertiary Button",
+  "uiKitScreenTertiaryButtonSnackText": "Tertiary Button Pressed",
+  "uiKitScreenTetradicButtonText": "Tetradic button",
+  "uiKitScreenTetradicButtonSnackText": "Tetradic Button Pressed",
+  "uiKitScreenDangerSnackButtonText": "Danger snack",
+  "uiKitScreenDangerSnackText": "Danger snack",
+  "uiKitScreenPositiveSnackButtonText": "Positive snack",
+  "uiKitScreenPositiveSnackText": "Positive snack",
+  "uiKitScreenColorCardPrimaryName": "Primary",
+  "uiKitScreenColorCardSecondaryName": "Secondary",
+  "uiKitScreenColorCardSurfaceName": "Surface",
+  "uiKitScreenColorCardSurfaceSecondaryName": "Surface Secondary",
+  "uiKitScreenColorCardBackgroundName": "Background",
+  "uiKitScreenColorCardBackgroundSecondaryName": "Background Secondary",
+  "uiKitScreenColorCardBackgroundTertiaryName": "Background Tertiary",
+  "uiKitScreenColorCardBackgroundTetradicName": "Tetradic Background",
+  "uiKitScreenColorCardDangerName": "Danger",
+  "uiKitScreenColorCardDangerSecondaryName": "Danger Secondary",
+  "uiKitScreenColorCardTextFieldName": "Text Field",
+  "uiKitScreenColorCardTextFieldLabelName": "Text Field Label",
+  "uiKitScreenColorCardTextFieldHelperName": "Text Field Helper",
+  "uiKitScreenColorCardFrameTextFieldSecondaryName": "Frame Text Field Secondary",
+  "uiKitScreenColorCardInactiveName": "Inactive",
+  "uiKitScreenColorCardPositiveName": "Positive",
+  "uiKitScreenColorCardSkeletonPrimaryName": "Skeleton Primary",
+  "uiKitScreenColorCardSkeletonSecondaryName": "Skeleton Secondary",
+  "uiKitScreenColorCardSkeletonTertiaryName": "Skeleton Tertiary"
 }
