refactor: Debug feature refactor (#102)
* feat: refactor debug screen

* feat: refactor debug feature

* fix: fixed after merge

* fix: fixed comments

* chore: restructured presentation folder

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -57,7 +57,7 @@
   "tempScreenDebugNavBarItemLabel": "Debug screen",
   "@segmentDebugScreen": {
     "---------": "---------",
-    "description": "debug screen"
+    "description": "Debug screen"
   },
   "debugScreenServerSubtitle": "Server",
   "debugScreenServerConnectButton": "Change server",
@@ -70,6 +70,46 @@
   "debugScreenThemeDark": "Dark Theme",
   "debugScreenThemeSystem": "System Theme",
   "debugScreenUikitNavigateButton": "Open UIKit",
+  "debugScreenReloadAppMessage": "Reload the app to see applied changes",
+  "@segmentUiKitScreen": {
+    "---------": "---------",
+    "description": "Ui kit screen"
+  },
+  "uiKitScreenTitle": "UI Kit",
+  "uiKitScreenTextFieldLabel": "Text Field",
+  "uiKitScreenCardText": "Card",
+  "uiKitScreenText": "Text",
+  "uiKitScreenPrimaryButtonText": "Primary Button",
+  "uiKitScreenPrimaryButtonSnackText": "Primary Button Pressed",
+  "uiKitScreenSecondaryButtonText": "Secondary Button",
+  "uiKitScreenSecondaryButtonSnackText": "Secondary Button Pressed",
+  "uiKitScreenTertiaryButtonText": "Tertiary Button",
+  "uiKitScreenTertiaryButtonSnackText": "Tertiary Button Pressed",
+  "uiKitScreenTetradicButtonText": "Tetradic button",
+  "uiKitScreenTetradicButtonSnackText": "Tetradic Button Pressed",
+  "uiKitScreenDangerSnackButtonText": "Danger snack",
+  "uiKitScreenDangerSnackText": "Danger snack",
+  "uiKitScreenPositiveSnackButtonText": "Positive snack",
+  "uiKitScreenPositiveSnackText": "Positive snack",
+  "uiKitScreenColorCardPrimaryName": "Primary",
+  "uiKitScreenColorCardSecondaryName": "Secondary",
+  "uiKitScreenColorCardSurfaceName": "Surface",
+  "uiKitScreenColorCardSurfaceSecondaryName": "Surface Secondary",
+  "uiKitScreenColorCardBackgroundName": "Background",
+  "uiKitScreenColorCardBackgroundSecondaryName": "Background Secondary",
+  "uiKitScreenColorCardBackgroundTertiaryName": "Background Tertiary",
+  "uiKitScreenColorCardBackgroundTetradicName": "Tetradic Background",
+  "uiKitScreenColorCardDangerName": "Danger",
+  "uiKitScreenColorCardDangerSecondaryName": "Danger Secondary",
+  "uiKitScreenColorCardTextFieldName": "Text Field",
+  "uiKitScreenColorCardTextFieldLabelName": "Text Field Label",
+  "uiKitScreenColorCardTextFieldHelperName": "Text Field Helper",
+  "uiKitScreenColorCardFrameTextFieldSecondaryName": "Frame Text Field Secondary",
+  "uiKitScreenColorCardInactiveName": "Inactive",
+  "uiKitScreenColorCardPositiveName": "Positive",
+  "uiKitScreenColorCardSkeletonPrimaryName": "Skeleton Primary",
+  "uiKitScreenColorCardSkeletonSecondaryName": "Skeleton Secondary",
+  "uiKitScreenColorCardSkeletonTertiaryName": "Skeleton Tertiary",
   "@segmentFeatureExample": {
     "---------": "---------",
     "description": "Example of feature"
